# Global-Macro-Intelligence-Dashboard

./: .gitignore  Learning_path.md  README.md  app.py  pyproject.toml  requirements.txt  schema.sql
.kiro/specs/dashboard-simplification/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/global-macro-dashboard/: .config.kiro  design.md  requirements.md  tasks.md
.streamlit/: secrets.toml.example
lib/: ai_summary.py  cache.py  calculations.py  data_fetcher.py  db.py  market_day.py  models.py  scraper.py
pages/: 1_📊_Asset_Monitor.py  2_🔗_Cross_Asset.py  3_🎯_Dominant_Variable.py  4_📅_Event_Analysis.py  5_📈_Expectations.py
src/: __init__.py  ai_summary.py  calculations.py  data_fetcher.py  scraper.py
tests/: __init__.py
tests/properties/: test_dashboard_simplification.py
tests/unit/: test_cache.py  test_calculations.py  test_db.py  test_market_day.py
